--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -74,10 +74,9 @@
       .timeChunkBar{
         background-color:#F5F2F2;
         margin:20px 0 20px 0;
-        padding:30px;
         background-repeat:no-repeat;
         background-size:40px 40px;
-        background-position:5%;
+        background-position:50px;
         text-align:center;
         display:flex;
         flex-direction:row;
@@ -87,7 +86,7 @@
         text-transform:uppercase;
         color:#009688;
         text-align:left;
-        padding-left:10%;
+        padding-left:110px;
         font-weight:500;
         font-size:24px;
       }
@@ -119,8 +118,8 @@
         color:#009688;
       }
       .offset-table{
-        margin-left:10%;
-        margin-right:10%;
+        margin-left:110px;
+        margin-right:110px;
         padding:0;
       }
     </style>
