--- a/src/pages/care-plan/su-risk/su-risk-multi-view.html
+++ b/src/pages/care-plan/su-risk/su-risk-multi-view.html
@@ -59,14 +59,13 @@
       .dateHeader{
         width:100%;
         text-align:left;
-        margin-left:20px;
         font-weight:bold;
-        margin:0 0 0 10px;
+        margin:0;
       }
       .riskDate{
         flex-grow:1;
         text-align:left;
-        margin-left:20px;
+        margin-left:10px;
         opacity:.8;
       }
 
