--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -131,6 +131,7 @@
               goal-data="{{goalData}}"
               goal-id="[[goalId]]"
               home="[[home]]"
+              page="[[page]]"
               patient="[[patient]]"
               user-list="[[userList]]"
               step-id="{{stepId}}"
