dropdown menu's                                                                                   no nested cards                                                                                   for notifications divide by line                                                                                   close other menu's when another opens
                                                                                right menu
                                                                                  hover:
                                                                                    grey background when hovered over
                                                                                      zivile will give

                                                                                capitalize the timechunks
                                                                                  need to write a function for this to translate the timechunks from db labels

                                                                                pre admission assessment
                                                                                  paper text-area
                                                                                  make dialog wider

                                                                                look at validation issues on care plan new section dialog

                                                                                look into taking the file name instead of set name from paper input

                                                                                tables
                                                                                  get rid of swipe left scrolls part

                                                                                su-goals
                                                                                  make space betw

--- a/src/elements/guuey-account-display/guuey-account-display.html
+++ b/src/elements/guuey-account-display/guuey-account-display.html
@@ -7,8 +7,8 @@
     <style>
 
       :host{
-        display:block;
-        width:100%;
+        display:inline-block;
+        padding:10px;
       }
       .accountCard{
         padding:10px;
@@ -51,7 +51,7 @@
         flex-grow:1;
       }
     </style>
-    <paper-card class="accountCard" elevation="3">
+
 
       <div class="mainRow">
         <img class="roundedImage" src="/images/defaultAvatar.png" />
@@ -71,7 +71,7 @@
         <paper-button on-tap="logout">logout</paper-button>
       </div>
 
-    </paper-card>
+
   </template>
 
   <script>
