--- a/src/pages/care-plan/su-goals/su-goals-edit-view.html
+++ b/src/pages/care-plan/su-goals/su-goals-edit-view.html
@@ -105,6 +105,9 @@
       .stepNumber{
         background-color:#F76363;
       }
+      .stepNumber:hover{
+        cursor:default;
+      }
     </style>
 
     <paper-dialog id="stepModal" class="guuey-modal guuey-add-modal">
@@ -183,15 +186,11 @@
 
         <div class="guuey-table">
 
-          <p class="tableScrollLabel">
-            swipe left scrolls table
-          </p>
-
           <table>
             <thead>
               <tr>
                 <th>
-                  Step #
+                  Step
                 </th>
                 <th>
                   Description
