--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -43,6 +43,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .drawer-list a.subroute {
       padding-left: 32px;
     }
+    .drawer-list a:hover{
+      background-color:#dedede;
+    }
     .headerBackground{
       background-image:url("../../images/header-background.png");
       width:100%;
