--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -129,14 +129,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height:auto;
         overflow-x:auto;
       }
-      .guuey-table .tableScrollLabel{
-        font-weight:bold;
-        text-transform:uppercase;
-        margin-bottom:0px;
-        padding-bottom:0px;
-        font-size:10px;
-        color:var(--table-scroll-lable-color);
-      }
       .guuey-table table{
         width:100%;
         background-color:var(--table-background-color);
@@ -202,6 +194,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color:#009688;
       }
       .guuey-modal{
+        width:600px;
         --paper-dialog:{
           :host{
             margin:0;
@@ -269,7 +262,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color:#FFFFFF;
       }
       .multiCardContainer{
-        height:150px;
+        height:110px;
         padding:20px;
       }
       .multiCardMain{
