--- a/src/elements/guuey-notification/guuey-notification.html
+++ b/src/elements/guuey-notification/guuey-notification.html
@@ -8,9 +8,8 @@
       :host{
         display:block;
         box-sizing: border-box;
-        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.4);
-        margin:10px;
-        padding:10px;
+        border-bottom:1px solid grey;
+        padding:20px 0 20px 0;
       }
       .flexNotify{
         display:flex;
