--- a/src/pages/care-plan/su-care/dependencies.html
+++ b/src/pages/care-plan/su-care/dependencies.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
+<link rel="import" href="../../../../bower_components/paper-input/paper-textarea.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../../bower_components/paper-fab/paper-fab.html" />
