--- a/src/pages/care-plan/su-care/su-care.html
+++ b/src/pages/care-plan/su-care/su-care.html
@@ -105,20 +105,15 @@
     <!--dialogue that works to add labels for custom text input area-->
     <paper-dialog id="customSectionModal" class="guuey-modal guuey-add-modal">
       <h2>Add a New Section</h2>
-      <paper-input
+      <paper-textarea
         label="Name the New Section"
         value="{{customData.label}}"
-        required
-        auto-validate
-        error-message="Please name the custom section.">
-      </paper-input>
-      <paper-input
+        maxlength="75">
+      </paper-textarea>
+      <paper-textarea
         label="Describe the New Section"
-        value="{{customData.label2}}"
-        required
-        auto-validate
-        error-message="Please describe the custom section">
-      </paper-input>
+        value="{{customData.label2}}">
+      </paper-textarea>
       <div class="modal-button-container">
         <paper-button on-tap="cancelNewSection">cancel</paper-button>
         <paper-button on-tap="saveNewSection">save</paper-button>
