updated firebase rules for new settings db section, updates su-profile to directly use suIndexData from su-header, updates ad-settings to include blur setting, updates def-home and su-header to use blur setting.

--- a/src/pages/admin/ad-settings/dependencies.html
+++ b/src/pages/admin/ad-settings/dependencies.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
-
+<link rel="import" href="../../../../bower_components/paper-slider/paper-slider.html" />
+<link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
 
