--- a/src/elements/su-header/su-header.html
+++ b/src/elements/su-header/su-header.html
@@ -23,6 +23,12 @@ setimage(boolean)
   <template>
     <!--firebase connection for the header info-->
     <firebase-document
+      id="settingsDB"
+      app-name="main"
+      path="/homes/[[home]]/settings"
+      data="{{settingsData}}">
+    </firebase-document>
+    <firebase-document
       id="suIndexDB"
       app-name="main"
       path="/homes/[[home]]/patients/suIndex/[[patient]]"
@@ -157,6 +163,7 @@ setimage(boolean)
         width:100%;
         height:150px;
         height:var(--header-image-height);
+        filter:blur(var(--su-image-blur, 50px));
       }
     </style>
 
@@ -171,13 +178,6 @@ setimage(boolean)
           fade
           src="[[suIndexData.image]]">
         </iron-image>
-
-          <input
-            id="imageInput"
-            type="file"
-            on-change="_inputChanged"
-            hidden>
-          </input>
 
           <guuey-photo-editor
             class="imageButton"
@@ -257,7 +257,8 @@ setimage(boolean)
         }
       },
       observers:[
-        "editQuery(query1600, query1400, query1200, query1000, query800, query600)"
+        "editQuery(query1600, query1400, query1200, query1000, query800, query600)",
+        "_suBlurValueChanged(settingsData.suBlurValue)"
       ],
       _computeHeaderName:function(fName, lName){
           return fName+" "+lName;
@@ -269,22 +270,16 @@ setimage(boolean)
           return true;
         }
       },
-      _inputChanged:function(e){
-        var reader= new FileReader();
-        var file=e.target.files[0];
-        reader.readAsDataURL(file);
-        reader.addEventListener("load", function () {
-          this.$.suIndexDB.setStoredValue("/homes/"+this.home+"/patients/suIndex/"+this.patient+"/image", reader.result);
-        }.bind(this), false);
-      },
-      _onAddFilesClick: function(e) {
-        if (document.createEvent) {
-          this.$.imageInput.value = '';
-          this.$.imageInput.click();
-        }
+      _suBlurValueChanged:function(value){
+        this.customStyle["--su-image-blur"] = (this.suBlurValue / 10)+"px";
+        this.updateStyles();
       },
       print:function(e){
         this.fire("print");
+      },
+      _suBlurValueChanged:function(value){
+        this.customStyle["--su-image-blur"] = (value / 10) + "px";
+        this.updateStyles();
       },
       editQuery:function(query1600, query1400, query1200, query1000, query800, query600){
         if(query600){
