--- a/src/pages/admin/ad-settings/ad-settings.html
+++ b/src/pages/admin/ad-settings/ad-settings.html
@@ -4,13 +4,38 @@
 
   <template>
 
+    <firebase-document
+      id="settingsDB"
+      app-name="main"
+      path="/homes/[[home]]/settings"
+      data="{{settingsData}}">
+    </firebase-document>
+
     <media-queries
       dimensions="{{dimensions}}">
     </media-queries>
 
     <style include="common-styles">
+    :host{
+      --app-grid-columns:2;
+    }
     .pageCard{
       min-height:800px;
+    }
+    #exampleBlurImage{
+      filter:blur(var(--su-image-blur));
+      height:200px;
+      width:200px;
+    }
+    .example{
+      text-align:center;
+      vertical-align:middle;
+    }
+    .content *{
+      align-self:center;
+    }
+    #blurSlider{
+      width:100%;
     }
     </style>
 
@@ -20,7 +45,20 @@
         icon="icons:settings">
       </admin-header>
       <div class="pageInnerCont padded">
-        <h1>Coming Soon!</h1>
+        <div class="app-grid">
+          <div class="control">
+            <div>
+               Image Blur Percentage: [[suBlurValue]]%
+            </div>
+            <paper-slider id="blurSlider" value="[[settingsData.suBlurValue]]" immediate-value="{{suBlurValue}}"></paper-slider>
+            <paper-button on-tap="_saveBlur">save</paper-button>
+          </div>
+
+          <div class="example">
+            <iron-image sizing="cover" id="exampleBlurImage" src="/images/people/001m.jpg"></iron-image>
+          </div>
+
+        </div>
       </div>
     </paper-card>
 
@@ -34,10 +72,28 @@
       ready:function(){
         this.fire("pageLoaded", {page:this.page});
       },
+      properties:{
+        suBlurValue:{
+          type:Number,
+          observer:"_blurValueChanged"
+        }
+      },
       behaviors:[
         Polymer.adminPagesAnimation,
         Polymer.adminResizeBehavior
-      ]
+      ],
+      _blurValueChanged:function(value){
+        this.customStyle["--su-image-blur"]=(value / 10)+"px";
+        this.updateStyles();
+      },
+      _saveBlur:function(){
+        //this.settingsData.suImageBlur = this.blurValue;
+        var path = "homes/"+this.home+"/settings/suBlurValue";
+        this.$.settingsDB.setStoredValue(path, this.suBlurValue)
+          .then(function(snapshot){
+            console.log(snapshot);
+          });
+      }
     });
 
   </script>
